Working on EGI.

--- a/egi_front/index.html
+++ b/egi_front/index.html
@@ -10,11 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Nephew Physical Therapy in Holland, Michigan is an orthopedic PT office that loves to treat muscle and joint pain, pain with pregnancy, and vertigo."
+      content="EcoGlow Innovations is a cutting-edge company dedicated to providing eco-friendly lighting solutions for a brighter and greener future. We specialize in designing and manufacturing innovative lighting products that combine functionality, aesthetics, and sustainability."
     />
     <meta
       property="og:description"
-      content="Nephew Physical Therapy in Holland, Michigan is an orthopedic PT office that loves to treat muscle and joint pain, pain with pregnancy, and vertigo."
+      content="EcoGlow Innovations is a cutting-edge company dedicated to providing eco-friendly lighting solutions for a brighter and greener future. We specialize in designing and manufacturing innovative lighting products that combine functionality, aesthetics, and sustainability."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title>Nephew Physical Therapy -- Holland, Michigan</title>
+    <title>EcoGlow Innovations -- Illuminate Your World, Sustainably.</title>
   </head>
   <body>
     <div id="root"></div>
